# dig-social-graph

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SPEC.md
.github/workflows/: ci.yml  ensure-version-increment.yml
src/: codec.rs  error.rs  graph.rs  lib.rs  manager.rs  sealer.rs  seams.rs  state.rs  wire.rs
tests/: dig_message_sealer.rs  graph.rs  manager.rs  no_x25519_residue.rs  sealer_seam.rs  state_machine.rs  wire.rs
tests/common/: mod.rs
