[package]
name = "dig-social-graph"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Canonical DIG social-graph core: the networkless, offer-first, symmetric, synchronous peer-connection state machine + wire types + four injected seams (Transport, EnvelopeSealer, StoreSubscriber, Persistence) that let dig-app maintain its social connections. Pure logic — no chain, no network, no crypto, no disk of its own."
license = "GPL-2.0-only"
repository = "https://github.com/DIG-Network/dig-social-graph"
readme = "README.md"
keywords = ["dig", "social-graph", "did", "peer", "connection"]
categories = ["data-structures", "cryptography"]

[dependencies]
# The canonical DIG identity/profile format — the ONLY DIG dependency (acyclic leaf). We reference a
# peer's profile by its store COORDINATES (its `Did` + launcher id + committed root) and speak the
# same `Did`/`Bytes32` types dig-identity publishes, so a profile reference byte-agrees everywhere.
# Consumed via git tag (dig-identity is not on crates.io — same pattern as dig-app), pinned to v0.2.0
# (the IdentityProfile / DidKeys / ProfileProof line, #777).
dig-identity = { git = "https://github.com/DIG-Network/dig-identity", tag = "v0.2.0" }
# Wire + persisted-state (de)serialization. The core is format-agnostic; dig-app picks the codec.
serde = { version = "1", features = ["derive"] }
# Deterministic hex codec for the 32-byte on-wire identifiers (launcher id, committed root).
hex = "0.4"
# Structured errors on the public API.
thiserror = "2"

[dev-dependencies]
# A concrete codec to prove the wire + persisted types round-trip byte-stably in tests.
serde_json = "1"
# The canonical bech32m Address codec, used ONLY by tests to mint well-formed `did:chia:` strings
# from a launcher id (mirrors dig-identity's own test helper). Not a runtime dependency.
chia-sdk-utils = "0.30"
